--- a/APP_FILMS_164/templates/genres/genres_afficher.html
+++ b/APP_FILMS_164/templates/genres/genres_afficher.html
@@ -57,7 +57,7 @@
 				<tbody>
 					<tr>
 						<td>
-							Aucun genre.
+							Aucune personne.
 						</td>
 						<td>
 							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
