--- a/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
@@ -38,13 +38,13 @@
 						{{ row.marque_moto }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.modèle_moto|default("", True) }}
+						{{ row.modèle_moto }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.année_moto|default("", True) }}
+						{{ row.année_moto }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.nombre_km_moto|default("", True) }}
+						{{ row.nombre_km_moto }}
 					  </th>
 					  <th class="align-middle">
 						{{ row.prix_moto }}
@@ -53,17 +53,17 @@
 						<a class="btn btn-primary" href="{{ url_for('film_add_wtf') }}" role="button">Ajouter</a>
 					  </th>
 					  <th class="align-middle">
-						<a class="btn btn-warning" href="{{ url_for('film_update_wtf', id_film_btn_edit_html=row.id_film) }}" role="button">Edit</a>
+						<a class="btn btn-warning" href="{{ url_for('film_update_wtf', id_film_btn_edit_html=row.id_moto) }}" role="button">Edit</a>
 					  </th>
 					  <th class="align-middle">
-						<a class="btn btn-danger" href="{{ url_for('film_delete_wtf', id_film_btn_delete_html=row.id_film ) }}" role="button">Delete</a>
+						<a class="btn btn-danger" href="{{ url_for('film_delete_wtf', id_film_btn_delete_html=row.id_moto ) }}" role="button">Delete</a>
 					  </th>
 					<tr>
 						<td class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('edit_genre_film_selected', id_film_genres_edit_html=row.id_film) }}" role="button">Modifier</a>
+							<a class="btn btn-warning" href="{{ url_for('edit_genre_film_selected', id_film_genres_edit_html=row.id_moto) }}" role="button">Modifier</a>
 						</td>
 						<td class="align-middle" colspan="5">
-							{{ row.GenresFilms|default("PAS DE GENRES", True) }}
+							{{ row.PersonneMoto|default("PAS DE PERSONNE", True) }}
 						</td>
 					</tr>
 				</tr>
@@ -72,10 +72,10 @@
 				<tbody>
 					<tr>
 						<td>
-							Aucun film.
+							Aucune moto.
 						</td>
 						<td>
-							<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Add</a>
+							<a class="btn btn-primary" href="{{ url_for('film_add_wtf') }}" role="button">Add</a>
 						</td>
 					</tr>
 				</tbody>
