--- a/APP_FILMS_164/templates/films_genres/films_genres_modifier_tags_dropbox.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_modifier_tags_dropbox.html
@@ -47,19 +47,19 @@
                                 id
                             </th>
                             <th class="">
-                                Titre
+                                Marque
                             </th>
                             <th class="">
-                                Durée
+                                Modèle
                             </th>
                             <th class="">
-                                Date sortie
+                                Année
                             </th>
                             <th class="">
-                                Description
+                                Nombre de Km
                             </th>
                             <th class="">
-                                Affiche
+                                Prix
                             </th>
                         </tr>
                     </thead>
@@ -69,22 +69,22 @@
 				<tbody>
 					<tr>
 						<td class="align-middle">
-							{{ row.id_film }}
+							{{ row.id_moto }}
 						</td>
 						<td class="align-middle">
-							{{ row.nom_film }}
+							{{ row.marque_moto }}
 						</td>
 						<td class="align-middle">
-							{{ row.duree_film|default("", True) }}
+							{{ row.modèle_moto|default("", True) }}
 						</td>
 						<td class="align-middle">
-							{{ row.date_sortie_film|default("", True) }}
+							{{ row.année_moto|default("", True) }}
 						</td>
 						<td class="align-middle">
-							{{ row.description_film|default("", True) }}
+							{{ row.nombre_km_moto }}
 						</td>
 						<td class="align-middle">
-                            <img class="img" src={{ row.cover_link_film|default(None, True) }} style="border: 0;display:block; width:150px; max-height:auto;" alt = "image masquée FFP67 (in COVID-29 Memory) (absente) mod 164">
+                            {{ row.prix_moto }}
 						</td>
 					</tr>
 				</tbody>
@@ -92,7 +92,7 @@
 				<tbody>
 					<tr>
 						<td>
-							Aucun film.
+							Aucune moto.
 						</td>
 						<td>
 							<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Add</a>
@@ -112,11 +112,11 @@
                 <div class="qtagselect isw360">
                     <select id="OM_JTSD" name="name_select_tags" class="qtagselect__select" multiple>
                         {% for row in data_genres_non_attribues %}
-                            <option value="{{ row.id_genre }}" name="name_tags_non_attribues_html" class="isblue" >{{ row.intitule_genre }}</option>
+                            <option value="{{ row.id_personne }}" name="name_tags_non_attribues_html" class="isblue" >{{ row.prenom_personne }}</option>
                         {% endfor %}
 
                         {% for row in data_genres_attribues %}
-                            <option value="{{ row.id_genre }}" name="name_tags_attribues_html" class="ispurple" selected>{{ row.intitule_genre }}</option>
+                            <option value="{{ row.id_personne }}" name="name_tags_attribues_html" class="ispurple" selected>{{ row.prenom_personne }}</option>
                         {% endfor %}
                     </select>
                 </div>
